Revision history for LWP-Authen-OAuth2

{{$NEXT}}

0.19      2022-03-10 16:43:24+01:00
    - Add Withings Service Provider (Brian Foley)
    - replace explicit gibberisch with a hopeful better explanation (Thomas Klausner)
    - Make meaningless doc explicitly meaningless. (Tamas TEVESZ)
    - Fixed broken link as reported by CPANTS. (Mohammad S Anwar)


0.18      2021-01-10 22:49:23+01:00
    - dist housekeeping, Dist::Zilla::PluginBundle::Author::DOMM


0.17	2020-11-22T17:42:02
    - fix bug in token-refresh, RT132661 (Ruud)
    - fix doc error reported by niceperl in RT133154 (niceperl)
    - add redirect_uri as optional request param (suggested by john ridley)
    - Fix casing of LWP::UserAgent in Pod link (Olaf Alders)


0.16    2019-02-25T21:39:03
    - remove useless links to search.cpan.org (Thomas Klausner)
    - add Michael Stevens to thank-you section (Thomas Klausner)
    - Add new Yahoo ServiceProvider. (Michael Stevens)
    - Make "make test" actually find all the tests. (Michael Stevens)
    - Update github repo link to point to domm not btilly. (Michael Stevens)
    - MANIFEST fixes (Thomas Klausner)


0.15	2018-10-31T17:54:15
    - Update to match CPAN (Colin Newell)
    - Add license file (eadjei)
    - Adding travis config (Ndifreke Ekott)
    - add Adam Millerchip to contributors/thanks (Thomas Klausner)
    - update synopsis to show state is required (Adam Millerchip)
    - Add Service Provider for Line (Adam Millerchip)


0.14	2017-08-16T08:18:46
   - released on CPAN-Day 2017 from Sibiu, Romania
   - Add Service Provider for Line (Adam Millerchip)


0.13    2016-11-21T15:08:43
    - Add documentation for some new methods, and for Dwolla (Adi Fairbank)


0.12    2016-07-13T12:44:47
    - fix typos in documentation (Nick Morrott, RT115463, RT115464)


0.11	2016-03-11T12:02:25
    - Ensure lib loads and instantiates (Leon Wright)
    - Catch feature changes that break instantiation (Leon Wright)