@@ -1,1 +1,0 @@
-prove -rv -e "perl -I ./lib" t
